--- a/voto-api/package.json
+++ b/voto-api/package.json
@@ -16,12 +16,16 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.16.1",
     "config": "^1.25.1",
+    "cookie-parser": "^1.4.3",
     "crypto-js": "^3.1.9-1",
     "express": "^4.14.1",
+    "express-session": "^1.15.3",
     "jsonwebtoken": "^7.3.0",
     "method-override": "^2.3.7",
     "morgan": "^1.8.1",
     "node-config": "0.0.2",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "sequelize": "^3.30.2",
     "sqlite3": "^3.1.8",
     "underscore": "^1.8.3",
