--- a/voto-client/package.json
+++ b/voto-client/package.json
@@ -25,9 +25,11 @@
     "@angular/router": "^4.0.0",
     "angular2-chartjs": "^0.2.0",
     "angular2-highcharts": "^0.5.5",
+    "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
     "ng-http-interceptor": "^3.1.1",
     "ng-semantic": "https://github.com/vladotesanovic/ngSemantic/tarball/master",
+    "ng2-charts": "^1.6.0",
     "ngx-facebook": "^2.4.0",
     "normalize.css": "^7.0.0",
     "rxjs": "^5.1.0",
