--- a/voto-client/package.json
+++ b/voto-client/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@swimlane/ngx-charts": "^6.0.0",
     "angular2-chartjs": "^0.2.0",
     "angular2-highcharts": "^0.5.5",
     "chart.js": "^2.6.0",
